feature: sse
